--- a/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
+++ b/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
@@ -430,12 +430,12 @@ do{
 
 
 #### runloop基础数据结构：
-CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个commonModes、一个commonModeItems。其中后面3个都是集合类型，里面放着的是CFRunLoopMode类型的元素，CFRunLoopMode的成员主要包含name、source0、source1、obbservers、timers等元素。currentMode和modes里的数据结构都是对应CFRunLoopMode类型，CFRunLoopMode对应5种mode：DefaultMode、UITrackingMode、UIInitializationMode、EventReceiveMode、CommonModes。currentMode是指当前runloop对应的运行mode，每次调用runloop的时候，只能指定一个mode为currentMode。这么做的目的就是为了在某个mode运行下，不会受到其他时间的影响，比如在滚动的trackingmode时，不会受到点击触摸事件的影响。 commonModes对应的是字符串，也就是前面5种mode的名称，它是一种技术解决方案。modeItems对应4种item：Observer、timer、source0、source1。
+CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个commonModes、一个commonModeItems。其中后面3个都是集合类型，里面放着的是CFRunLoopMode类型的元素，CFRunLoopMode的成员主要包含name、source0、source1、obbservers、timers等元素。currentMode和modes里的数据结构都是对应CFRunLoopMode类型，CFRunLoopMode对应5种mode：DefaultMode、UITrackingMode、UIInitializationMode、EventReceiveMode、CommonModes。currentMode是指当前runloop对应的运行mode，每次调用runloop的时候，只能指定一个mode为currentMode。如果需要切换Mode，只能退出Loop，再重新指定一个Mode进入。这么做的目的就是为了在某个mode运行下，不会受到其他时间的影响，比如在滚动的trackingmode时，不会受到点击触摸事件的影响。 commonModes对应的是字符串，也就是前面5种mode的名称，它是一种技术解决方案。modeItems对应4种item：Observer、timer、source0、source1。
 
 * 注意：
   * CFRunLoop和NSRunLoop的区别就是：CFRunLoop是纯C的API，是线程安全的，NSRunLoop是对CFRunLoop的包装，它不是线程安全的。 所以如果在一个线程中操作另一个线程的runloop可能会产生意想不到的后果。所以可以使用getCGRunLoop获取对应的CFRunLoopRef类，来达到线程安全的目的。
 
-  * RunLoop与线程是一一对应的关系。所有的runloop被存在一个全局的字典容器中。我们无法手动代码创建runloop，只能通过currentRunLoop获取当前的runloop，获取的过程中，以线程为key值进行查找，没有找到就会默认创建，所以子线程中，不手动调用[[NSRunloop current] run]，则该线程中的runloop就不会自动开启。 
+  * RunLoop与线程是一一对应的关系。CFRunLoop是基于pthread来管理的。所有的runloop被存在一个全局的字典容器中。我们无法手动代码创建runloop，只能通过currentRunLoop获取当前的runloop，如果你不主动获取，那它永远都不会有。获取的过程中，以线程为key值进行查找，没有找到就会默认创建。RunLoop的创建是发生在第一次获取时，RunLoop销毁是发生在线程结束时。所以子线程中，不手动调用[[NSRunloop current] run]，则该线程中的runloop就不会自动开启。 
 
   * 五种mode的区别：DefaultMode是APP默认的mode，通常主线程是在这个mode下运行；TrackingMode是UIScrollView的滑动mode；UIInitializationMode是app启动时的mode，启动完成后就不再使用；EventReceiveMode系统内部接收事件的mode，通常用不到；CommonMode则实际上不是一种模式，而是一种mode的组合方式。一个RunLoop包含多个Mode、每个Mode又包含多个Timer、Observer、Source；
 
@@ -448,13 +448,21 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
     [[NSRunLoop currentRunLoop] addTimer:timer3 forMode:NSRunLoopCommonModes];
     ```
 
-    CommonMode就是为了解决一个RunLoop只能有一个Mode而产生的技术解决方案。而一个mode一旦被标记为common属性的话，则该mode的名字字符串就会被放到当前RunLoop的commonModes集合中，当runloop的mode发送变化时，runloop会将commonModeItems中的Observer、timer、source同步到commonModes集合中的mode中，这样就可以让一些事件可以同时在多个mode中工作。比如NSTimer，当其被添加进commonMode中时，它就可以在标记了common属性的DefaultMode和TrackingMode中同时运行。
+    CommonMode就是为了解决一个RunLoop只能有一个Mode而产生的技术解决方案。而一个mode一旦被标记为common属性的话，则该mode的名字字符串就会被放到当前RunLoop的commonModes集合中，当runloop的mode变成CommonMode时，runloop会将commonModeItems中的Observer、timer、source同步到commonModes集合中的mode中，这样就可以让一些事件可以同时在多个mode中工作。比如NSTimer，当其被添加进commonMode中时，它就可以在标记了common属性的DefaultMode和TrackingMode中同时运行。
 
   * 4种Mode Item：Observer、timer、source0、source1：Oberver主要是用来观察RunLoop自身的6大状态，Timer实际就是我们用的NSTimer，也就是说NSTimer是根据RunLoop的Timer事件实现的，所以它是不准的。source0用于接收用户事件，比如UIEvent事件、performSelector调起的函数等。source1事件是系统内核使用的，比如基于Port的线程间通信、系统事件捕捉等，它可以主动唤起线程。
 
+  * source0 和 source1的关系：
+
+    source0只包含了一个回调，不具备唤醒线程的能力。使用时，你需要先调用CFRunLoopSourceSignal(source)，将这个Source标记为待处理，然后手动调用CFRunLoopWakeUp(runloop)来唤醒RunLoop，让其处理这个事件。 Source0事件则主要用于app应用层事件，
+
+    source1包含了一个mach_port和一个回调，具备唤醒线程的能力。主要用于通过内核和其他线程相互发送消息和系统内核事件，
+
+    所以一个touch事件，最初是由系统点击屏幕捕获到的系统事件，然后通过mach_msg，在APP内核生成一个source1事件，之后source1唤醒了当前线程，然后将其包装成source0事件去处理。
+
   * runloop循环状态：
 
-    第一步：进入RunLoop会发出**KCFRunLoopEntry**通知Observer，表示将循环监听当前runloop的mode中的各种状态。（注意：不存在KCFRunLoopBeforeObserver通知，然后如果将监听代码放到main函数里面，可以监听到 defaultMode的开启。其次，当切换mode时，比如从DefaultMode切到TrackingMode：会先执行DefaultMode的kCFRunLoopExit通知，然后执行UITrackingRunLoopMode的kCFRunLoopEntry通知；当滚动结束后，会先执行UITrackingRunLoopMode的kCFRunLoopExit通知,然后再执行DefaultMode的kCFRunLoopEntry通知，重新进入DefaultMode。）；
+    第一步：进入RunLoop会发出**KCFRunLoopEntry**通知，表示将循环监听当前runloop的mode中的各种状态。（注意：不存在KCFRunLoopBeforeObserver通知，然后如果将监听代码放到main函数里面，可以监听到 defaultMode的开启。其次，当切换mode时，比如从DefaultMode切到TrackingMode：会先执行DefaultMode的kCFRunLoopExit通知，然后执行UITrackingRunLoopMode的kCFRunLoopEntry通知；当滚动结束后，会先执行UITrackingRunLoopMode的kCFRunLoopExit通知,然后再执行DefaultMode的kCFRunLoopEntry通知，重新进入DefaultMode。）；
 
     第二步：进入Loop后，会先通知Observer，RunLoop将要触发Timer回调和Sources回调，接着执行block；（其实是先判断是否有timer事件和source0事件，有的话会先发送**KCFRunLoopBeforeTimers**和**KCFRunLoopBeforeSources**，处理对应Timer回调和Sources回调，然后执行block。处理sources回调时如果有Source1是ready状态的话，则会先跳转到handle_msg去处理消息）；
 
@@ -493,8 +501,6 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
     ```
 
     
-
-  * source0 和 source1的关系：source1事件是具备唤醒线程的能力，但是主要用于系统内核事件，source0事件则主要用于app应用层事件，不具备唤醒线程的能力。所以一个touch事件，最初是由系统点击屏幕捕获到的系统事件，然后通过mach_msg，在APP内核生成一个source1事件，之后source1唤醒了当前线程，然后将其包装成source0事件去处理。
 
   * RunLoop主要处理6种事件：
     * 1、是Observer事件，主要是用于监听RunLoop本身的状态，然后Core Animation也是通过Observer监听状态来进行UI绘制的；
@@ -694,7 +700,6 @@ CFRunLoopRef 里包含一个pthread、一个currentMode、一个modes、一个co
       [self destroyThread:nil];
   }
   ```
-
 
 [runloop详解](https://blog.ibireme.com/2015/05/18/runloop/)
 
