--- a/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
+++ b/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
@@ -854,8 +854,28 @@ void (^block1) = ^{val=1;}; //注意，在MRC下，block1是一个栈block，因
 
 问题：为什么会出现_ _ block？
 
-block对于不同的数据类型，有不同的截获方式。全局变量、静态局部变量都是存储在数据区，所以在block内对其进行修改，也可以成功；**对auto变量进行修改，那是否能够实现？答案是不能**(我们如果在block里对auto类型变量进行**修改**，编辑器会直接报错)。其次我猜测是因为block里修改auto变量实际上就会触发到内存相关问题，首先对于auto基础数据类型，因为是值传递进来的，所以修改了block里面的值，就没法同步到block外面，所以编译器不允许；对于auto对象类型，在block里修改了对象（其实就是重新赋值），那就是在堆上开辟了一块新的内存空间的问题，所以两个对象无关联的话，那其实也是在block内外无法同步的，所以编译器同样不会允许。
-所以这就出现了 _ _ block。
+block对于不同的数据类型，有不同的截获方式。这个截获方式是指block对外部变量的使用，使用的时候会根据不同的类型对值或者引用计数进行管理。但是**使用却不可以进行修改**，首先全局变量、静态局部变量都是存储在数据区，所以在block内对其进行修改，肯定是可以。但是auto类型的变量，修改之后是无法block内外同步的，所以编译器实际也是会直接报错。我猜测是因为block里修改auto变量实际上就会触发到内存相关问题，首先对于auto基础数据类型，因为是值传递进来的，所以修改了block里面的值，就没法同步到block外面，所以编译器不允许；对于auto对象类型，在block里修改了对象（其实就是重新赋值），那就是在堆上new了一块新的内存空间，所以两个对象无关联的话，那其实也是在block内外无法同步的，所以编译器同样不会允许。
+
+```
+	// 首先，修改其实就是赋值操作。调用set方法，改变对象的成员变量这种不算，因为是调用getter方法
+	int age = 10; //没有__block会报错
+	FCFPerson * p = [FCFPerson new]; //没有__block会报错
+    p.name = @"fcf";
+    void (^block)(void) = ^{
+        // (age->__forwarding->age) = 20;
+        age = 20;
+        p = [FCFPerson new];
+        p.name = @"fcf1";
+        NSLog(@"age=%d, name=%@",age, p.name);
+    };
+    block();
+    NSLog(@"%d",age);
+```
+
+
+
+但是我们确实会存在这种需求，就是在block里对截获变量进行修改。且修改之后能够同步到block的内外。所以苹果就给出了_ _ block;
+
 什么是 _ _ block? 
 **_ _ block其实是一个存储区域说明符，它可以指定变量值存储到哪个区域中**。所以_ _ block可以解决block内部无法修改auto数据类型的问题。但是注意：_ _ block不能修饰全局变量、静态变量（因为这两个变量存储在数据区，数据区里的东西，编译完成后就不能轻易动）。
 
@@ -1052,7 +1072,7 @@ _ link = [CADisplayLink displayLinkWithTarget:[FCFProxy proxyWithTarget:self] se
 #### 内存管理方案
 * **TaggedPointer**：对于一些小对象，比如NSNumber、NSDate、NSString。它有可能采用的是TaggedPointer的管理方式进行内存管理的，它是对象指针实际上不指向任何内存地址，而是直接将值存储在了指针本身里，该指针就被拆分成两部分，一部分是直接保存数据，另一部分是作为特殊标记。
   * 注意1：这里说的小对象，指的是对象的值很小，正好可以使用指针位数放下。如果超过了指针的位数，则使用原来的存储方案。比如NSNumbber, 当数值很小时，采用的是TaggedPointer的方式，如果数值非常大，则就又会是普通的存储方式；
-  * 注意2：TaggedPointer技术不仅仅是内存方面的优化，使用上也会优化。比如对使用了TaggedPointer技术的对象发送消息时，objc_msgSend内部实际上也做了优化，它不会去走消息转发的流程，而是直接从TaggedPointer内取出它的值。比如：NSNumber *number = @10; [number intValue];
+  * 注意2：TaggedPointer技术不仅仅是内存方面的优化，使用上也会优化。比如对使用了TaggedPointer技术的对象发送消息时，**objc_msgSend内部实际上也做了优化，它不会去走消息转发的流程，而是直接从TaggedPointer内取出它的值**。比如：NSNumber *number = @10; [number intValue];
   * 面试题1：下面代码会发生什么？为什么？
   	```
   	@property (nonatomic, copy) NSString * name;
@@ -1091,6 +1111,7 @@ _ link = [CADisplayLink displayLinkWithTarget:[FCFProxy proxyWithTarget:self] se
 
 * **NONPOINTER_ISA**：在runtime章节中有提到isa是指向当前对象所属类的一个指针。一个结构体含有isa指针，那可以说明它是一个对象类型。实际上isa是对应一个isa_t的联合体，在64位架构下，它是由64个0和1的比特位组成。而实际上存储该对象所属类对象地址只需要用到大概33位，所以剩下的位数就可以用来存储其他的信息。
   我们来看看NONPOINTER_ISA的基础数据结构：
+
   * 第1位：是一个标志位，表示了它是否是一个非指针类型的isa，如果是0则说明它只是一个指针，内部的数据都是对应class的地址，如果是1则表示它是一个非指针类型的isa，内部数据只有部分用于存储class的地址；
   * 第2位：表示当前对象是否有管理对象——Association；
   * 第3位：表示是否使用ARC进行内存管理；
@@ -1243,6 +1264,9 @@ AutoreleasePoolPage对象占用4096个字节，除了存放基础的内部成员
   在子线程中，如果你创建了Pool的话，产生的Autorelease对象就会交给Pool去管理，如果你没有创建Pool，产生了Autorelease对象，就会调用autoreleaseNoPage方法。在这个方法中，会帮你自动创建一个hotPage(hotPage可以理解为当前正在使用的AutoreleasePoolPage)。然后调用page->add(obj)将对象添加到当前正在使用的AutoreleasePoolPage的栈中，所以这也不会导致内存泄漏。
 
 * main函数的AutoreleasePool有什么作用，可否直接去去掉？
+
+  其实在主线程的RunLoop开启的时候就在主线程RunLoopEntry的时候就创建了一个AutoreleasePool。并且执行了push操作，所以main函数里的去不去掉应该问题都不大。其次子线程不开启RunLoop，其实也是一样的，因为主线程有AutoreleasePool。而且无论什么哪里的AutoreleasePoolPage，其实都是添加进同一个双向链表里面。只是page是区分thread的。
+
   实际上UIApplicationMain是永远不会返回的，除了系统kill应用，系统会把整个应用占用的内存释放掉。因为UIApplicationMain永远不会返回，所以这里的AutoreleasePool就没有执行pop的机会，所以实际上如果删掉应该也不会有内存泄漏的问题。
 
 * 自动释放池在MRC和ARC中的区别：
