--- a/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
+++ b/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
@@ -1313,10 +1313,10 @@ NSLog(@"number = %@", number); //这里是可以打印出来的
 ### 锁与多线程
 #### 进程与线程
 * 进程：(线程+内存+文件/网络句柄)
-  指在系统中**正在运行**的一个应用程序，是系统进行**资源分配和调度的基本单位**。每个进程都有自己独立的内存空间，每个进程的内存是相互独立的。这里的内存是逻辑内存，指的是虚拟地址空间（虚拟地址空间通过某种映射方法转换成实际的物理地址。所以只要妥善控制映射过程，就能够让单个进程所能访问到的物理地址空间不会跟另一个程序相重叠，达到地址空间隔离的效果。其次在真正的内存使用过程中，每切换一个进程后，虚拟地址空间都得完全映射到物理地址中，如果内存不足，则会先将正在使用内存的其他程序移出以空出内存供当前程序使用。这也是为什么APP容易被后台强杀的原因）
+  指在系统中**正在运行**的一个应用程序，是系统进行**资源分配和调度的基本单位**。**每个进程都有自己独立的内存空间，每个进程的内存是相互独立的**。这里的内存是逻辑内存，指的是虚拟地址空间（虚拟地址空间通过某种映射方法转换成实际的物理地址。所以只要妥善控制映射过程，就能够让单个进程所能访问到的物理地址空间不会跟另一个程序相重叠，达到地址空间隔离的效果。其次在真正的内存使用过程中，每切换一个进程后，虚拟地址空间都得完全映射到物理地址中，如果内存不足，则会先将正在使用内存的其他程序移出以空出内存供当前程序使用。这也是为什么APP容易被后台强杀的原因）
 
 * 线程
-  是指进程中一个单一顺序的控制流，是程序执行的最小单位。进程可看做事线程的容器，一个进程可以并发多个线程，每条线程单独执行不同任务，**各个线程之间共享进程的内存空间（包括代码段、数据段、堆等）**，所以线程也不是越多越好，开辟子线程也就意味着消耗更多的内存；其次线程之间的上下文切换也会开销很大。
+  **是指进程中一个单一顺序的控制流，是程序执行的最小单位**。进程可看做是线程的容器，一个进程可以并发多个线程，每条线程单独执行不同任务，**各个线程之间共享进程的内存空间（包括代码段、数据段、堆等）**，所以线程也不是越多越好，开辟子线程也就意味着消耗更多的内存；其次线程之间的上下文切换也会开销很大。
 
   线程主要包括：
 
@@ -1326,7 +1326,7 @@ NSLog(@"number = %@", number); //这里是可以打印出来的
 
 - 线程调度
   当线程数小于等于处理器数量时，是真正的并发，不同的线程运行在不同的处理器上，彼此不相干。但是当线程数量大于处理器数量时，则至少有一个处理器会运行多个线程。
-  在单个处理器处理多个线程时，操作系统会让这些线程轮流执行。这些线程的执行过程则是根据线程的状态进行调度。
+  在单个处理器处理多个线程时，操作系统会让这些线程轮流执行。这些线程的执行过程则是根据线程的状态进行调度。这个叫做并行。
 
   - 运行
 
@@ -1334,7 +1334,7 @@ NSLog(@"number = %@", number); //这里是可以打印出来的
 
   - 等待（阻塞）
 
-    处于运行中的线程有一个时间片的运行时间。刚创建的线程，不会立即执行，会先进入就绪队列；当线程被分配到CPU时间后，线程进入到运行状态；在运行期间，如果碰到非常耗时的操作，则线程会被挂起进入阻塞状态，以让CPU可以执行其他任务。
+    处于运行中的线程有一个时间片的运行时间。刚创建的线程，不会立即执行，会先进入就绪队列；当线程被分配到CPU后，线程进入到运行状态；在运行期间，如果碰到非常耗时的操作，则线程会被挂起进入阻塞状态，以让CPU可以执行其他任务。
 
 * 线程优先级
 虽然所有的任务按照上述的方法轮流执行，但是有一些非常紧急的任务可能会需要先执行。所以这就需要让优先级高的任务优先执行，或者说让优先级高的任务优先进入就绪状态。但是由于某个优先级低的任务可能就存在饿死（一直得不到执行）的情况，所以优先级得动态调整。
