--- a/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
+++ b/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
@@ -108,6 +108,59 @@ iOS设备显示器每绘制完一帧画面，复位时会发送一个VSync垂直
   * CALayer的后备存储Backing Store : 当我们调用CALayer的drawInContext方法时，layer会自动创建一块以layer大小成正比的内存区域，这个区域就是后备存储（backing store）。所以也最好不要随意重写drawRect:等相关方法。
 
 ### OC基础特性
+
+#### NSMutableArray底层
+
+NSArray是线性连续内存，和C语言的数组应该差不多。但是NSMutableArray是可以插入和删除的，那如何做到高效呢？插入和删除的时候，如何做到尽可能少的移动或者不移地其他元素？
+
+NSMutableArray是在C语言的基础上进行过优化的结构数组。它使用了环形缓冲区来处理内存移动的损耗。
+
+首先C语言数组的话，假设你在0位置插入一个元素，那么它会将后续元素都往后移动一位；那如果你删掉了第0位置的元素，那么后续元素又都会往前移动。
+
+那NSMutableArray做了哪些优化？首先它使用了一个_ userd来记录已使用的数量；使用 _size来表示整个Array的大小，使用 _ offset来表示缓冲区里的数组的第一个元素索引。当最后一个下标存满了之后，它又会回到头结点进行存储。这样就形成了一个环形存储区域。
+
+有了offset，可以在不移地其他元素的情况下进行头尾的删除操作。中间元素的插入和删除也是尽可能少地移动元素。
+
+其次可以循环使用空的区域。
+
+注：**为了使得中间元素的移除和插入更方便，其实可以使用环形链表来使用。但是iOS好像没有这么做，因为打印的数组元素的内存地址确实是连续的**。
+
+[NSDictionary和NSMutableArray底层原理](https://blog.csdn.net/Deft_MKJing/article/details/82732833)
+
+#### NSMutableDictionary底层
+
+NSDictionary是对_CFDictionary的封装。它内部使用了两个指针数组分别存储keys和values。两个数组的长度肯定是一样的。
+
+然后底层代码中key和value都是通过hash来进行查找的。所以可以理解为存储keys和values的两个数组都是哈希表。且对key进行哈希函数计算出来的下标既对应keys数组的下标又对应values数组的下标。
+
+从哈希表的知识了解到。拉链法的查找时间复杂度更高，而字典的查找时间复杂度是O(1)，所以判断字典底层的哈希表使用的是开放定址法。
+
+##### 哈希表
+
+哈希表是通过key值来直接访问的数据结构。具体来说。它是通过一个散列函数对key值进行计算，然后将结果映射到表中的一个位置。这个表就是散列表。（所以可以认为散列表首先是一个简单的数组，然后散列函数计算key值得到的结果(**哈希值**)就是数组的下标。）
+
+所以这个**散列函数**就非常关键。因为对不同的key值，所计算出来的**哈希值**有可能是相同的。这就是造成了**冲突**。
+
+由此，散列表就不可能是单纯的数组了。它还需要处理冲突。散列表处理冲突的最主要的方法就是**开放定址法 和 拉链法**。
+
+* 拉链法
+
+  拉链法的做法是，先用一个数组直接存储**下标**，这个下标也就是哈希值。然后每一个下标后面对应一个链表，链表存储哈希值相同的key值及其内容。这样就能解决冲突问题
+
+  比如：有一组数据[（10：aa），（11：bb）,（12：cc），（13：dd），（21：ee）,（22：ff），（24：gg）]。哈希算法取余。所以数组下标0对应：（10：aa）；下标1对应：（11：bb）、（21：ee）；下标2对应：（12：cc），（22：ff） ... 
+
+  拉链法的问题就是：如果冲突比较严重的话，后续链表就会很长。链表一长也不利于查找，性能就大打折扣，极端情况下会退化成链表。
+
+* 开放定址法：
+
+  开放定址法，顾名思义就是哈希值与数组下标不一定一一对应的。当有冲突的时候，位置会有一定的偏移（也就是说位置是开放的）。
+
+  比如：有一组数据[（10：aa），（11：bb）,（12：cc），（13：dd），（21：ee）,（22：ff），（24：gg）]。哈希算法取余，假设数组count是10。所以数组标0 ——（10：aa）；1——（11：bb）；2——（12：cc）；3——（13：dd）; 4  —— （24：gg）；5、6、7 空 ； 9 —— （21：ee） ; 8 —— （22：ff） 。
+
+  开放定址法的问题是：数组的大小可能不够存储，所以就得进行扩容（当然拉链法也存在需要动态扩容的问题）。
+
+  
+
 #### KVO
 KVO是OC观察者模式的实践之一，使用了里式替换的设计原则。KVO的实现原理是通过Runtime的**isa混写**技术给当前对象A生成一个NSNotifying_A的子类，然后重写所要监听的属性的Setter方法，Setter方法里会调用willChangeValueForKey:和didChangeValueForKey:方法。然后就会在ObserveValueForKey里监听到变化。
 ```oc
@@ -156,10 +209,14 @@ OC在初始化的时候，会去加载map_images，map_images最终会调用objc
     如果是子类第一次使用，那么其父类的initialize方法也会被自动调用，且在+initialize方法里无需手动调用super，而且调用顺序是**先父类后子类**（感觉之所以这样操作是由于加载子类的时候，必须先加载父类）。如果类和分类都实现了initialize方法，则只有最后编译的category的initialize方法会被调用一次，其他的不会被调用，因为是懒加载。系统用它来初始化静态变量。
 
   * 为什么+load和+initialize方法会存在这样的区别？
-	+initialize的本质是通过objc_msgSend的消息调用机制进行调用的。所以它肯定遵循分类的调用顺序(先分类后宿主类，先父类后子类)；
-	+load方法则不是runtime的消息调用机制，而是在获取到load函数地址时，直接进行调用的。所以方法不会出现覆盖的情况。
+  +initialize的本质是通过objc_msgSend的消息调用机制进行调用的。所以它肯定遵循分类的调用顺序(先分类后宿主类，先父类后子类)；
+  +load方法则不是runtime的消息调用机制，而是在获取到load函数地址时，直接进行调用的。所以方法不会出现覆盖的情况。
 
-* 扩展： 扩展可以说是一个匿名的分类，但是它又不是分类，因为它是编译时决议的，生命周期随之宿主类，只有声明，没有实现，依附在宿主类中。主要的作用就是用来声明私有属性、私有方法、私有成员变量。不能为系统类添加扩展。
+* 扩展： 扩展可以说是一个匿名的分类，但是它又不是分类，因为它是**编译时**决议的，生命周期随之宿主类，只有声明，没有实现，依附在宿主类中。主要的作用就是用来声明私有属性、私有方法、私有成员变量。不能为系统类添加扩展。
+
+* 有多个Category的同名方法。如何获取到宿主类的最元素方法？
+
+  todo
 
 
 #### Association关联对象
@@ -187,7 +244,17 @@ void objc_setAssociatedObject(id object, const void* key, id value, objc_Associa
 #### 属性关键字
 * 读写属性：readwrite: 默认，可读可写；readOnly: 只读；
 
-* 原子属性：atomic: 原子性; nonatomic: 非原子性（原子性可以理解为setter和getter方法内部是线程同步的）。atomic并不能完全包证使用属性的过程是线程安全的，  atomic能够保证读写方法的原子性，比如：如果是一个可变数组的话，只能保证数组的读写方法的原子性，但是对数组里元素的操作是没法保证原子性的。其次 atomic非常耗性能。一般我们保证可变数组的线程安全的最直接方式是使用信号锁，如果要实现多读单写则要使用dispatch_barrier_async。
+* 原子属性：atomic: 原子性; nonatomic: 非原子性
+
+  atomic修饰的属性的读写方法里是进行加锁了的。老版本使用的是自旋锁（新版本有可能使用的是unfair_lock）。注意是setter和getter方法里都使用了锁。而且自旋锁是一把忙等的锁。所以这也导致属性的访问效率不是很高，所以就不建议使用atomic。
+
+  其次原子性操作并不能完全保证线程安全。它只能保证读写方法的原子性。
+
+  eg1：当一个线程在get或set时，另一个线程进行了release操作，那就可能会直接crash。这就不能说是线程安全的。
+
+  eg2：如果是一个可变数组的话，只能保证数组的读写方法的原子性，但是对数组里元素的操作是没法保证原子性的。（其次 atomic非常耗性能。一般我们保证可变数组的线程安全的最直接方式是使用信号锁，如果要实现多读单写则要使用dispatch_barrier_async）
+
+  [自旋锁和atomic](https://juejin.cn/post/6844903850269212685)
 
 * assign & weak：assign可以修饰基础数据类型和对象类型，但是修饰的对象类型，在对象释放后不会自动置为nil，容易导致垂悬指针错误；weak只能用于修饰对象类型，weak指针指向的对象释放后，会在dealloc内部对weak指针置为nil操作。所以一般使用是用weak修饰对象类型，用assign修饰基础数据类型。其次他们修饰对象类型的话也都不会增加所指对象的引用计数。
 
