整理12月面试题

--- a/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
+++ b/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
@@ -2362,7 +2362,7 @@ Q：HTTPS是绝对安全的吗？为什么
 
 
 #### HTTP1.x和HTTP2的主要区别
-* HTTP2采用二进制格式，HTTP1是文本格式。二进制格式更健壮；
+* HTTP2采用二进制帧格式，HTTP1是文本格式。二进制格式更健壮；
 * HTTP2有多路复用，即共享连接，相当于每个连接上可能会有多个request；
 * HTTP2的head会进行压缩缓存。HTTP1则每次都会重复发送；
 
