阅读优化细节

--- a/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
+++ b/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
@@ -2188,6 +2188,18 @@ https://juejin.im/post/6844904167010467854
 
 
 
+##### 锁相关面试题及细节
+
+* 为什么自旋锁性能更强？
+
+  因为自旋锁会在等待的过程中一直runing，减少了线程之间的上下文切换的消耗。
+
+* 如果atomic只对写加锁，不对读加锁，会有什么问题？
+
+  会有问题。像我们做多读单写时，因为写的过程中用栅栏拦截了读操作。但是如果只对写进行加锁，那读不加锁的话，读取到的数据就可能存在问题。因为有线程一直在进行写操作。所以实际上要对读写都进行加锁，而且是同一把锁。
+
+[iOS锁](https://zhuanlan.zhihu.com/p/82300525)
+
 
 #### 死锁的几种情况
 
