--- a/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
+++ b/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
@@ -1576,7 +1576,7 @@ SerialQueue.sync{
 //分析：同上面的分析类似。使用串行队列，最外层任务是在当前线程中执行，内部任务会开辟新的线程执行，且不要求立马执行。外部任务的执行完成意味着内部任务也执行完成，而内部任务可以在另外的线程中执行完成，所以这个是可以正常运行的！
 ```
 ##### 全局队列优先级
-创建全局队列时，有一个参数是优先级的标识，所以如果要在并行队列中，让任务先执行，这可以通过设置这个优先级来达到目的（但是这里要注意，先执行并不一定是第一个执行完，它只能保证开始的执行顺序而已）。它的优先级包括（低-高：background（同步备份数据）、utility（需要时间的下载）、default、user-Initiated(用户出发的，如打开文件)、user-Interractive(用户交互，如主线程事件)）
+创建全局队列时，有一个参数是优先级的标识，所以如果要在并行队列中，让任务先执行，这可以通过设置这个优先级来达到目的（但是这里要注意，先执行并不一定是第一个执行完，它只能保证开始的执行顺序而已）。它的优先级包括：high、default、low、background。在磁盘IO操作的时候，CPU可能会处于等待IO完成的状态，导致资源浪费，如果使用background的话，就可以实现throllter（节流）的效果，将IO启动时间延时，将CPU用于处理其他更重要的任务。
 
 ##### dispatch_barrier
 
@@ -1755,9 +1755,8 @@ NSOperation是基于GCD更高一层的封装。它是基于两个概念**操作*
   * NSOperation的队列有区别于GCD的先进先出的调度队列。NSOperationQueue是根据NSOperation的依赖关系来决定将队列中的哪个Operation置成就绪状态，然后进入就绪状态的Operation的**开始执行顺序**取决于操作之间的优先级；
   * OperationQueue实现了暂停、继续、终止、优先顺序、依赖等操作。
   * NSOperationQueue只提供了两种不同的队列：主队列和自定义队列；主队列运行在主线程之上，自定义队列运行在后台。
-  * NSOperationQueue通过设置最大并发量maxConcurentOperationCount来确定其实串行还是并发。
-
-* 如何实现多线程
+  * NSOperationQueue通过设置最大并发量maxConcurentOperationCount来确定其实串行还是并发。默认值是-1，表示会根据系统条件设置最大值。
+* 如何实现多线程：maxConcurrentOperationCount 大于1就是多线程操作
 * 单独的NSOperation使用同步运行，把它放到NSOperationQueue中，然后设置最大并发量大于1就可以实现多线程的运行效果；
 ##### NSInvocationOperation
 单独使用NSInvocationOperation是在当前线程中执行，并不开启线程。将其放到其他线程下面，才会开启新线程
@@ -1962,7 +1961,7 @@ https://juejin.im/post/6844904167010467854
 锁主要可以分为三大类：**信号量**、**互斥锁**、**自旋锁**：
 锁就是为了防止多个线程同时访问同一资源（这个资源就是指加解锁之间的代码，也叫做临界区），导致数据错乱。加锁之后，线程就无法继续访问，必须等到当前锁解开之后才可以继续使用（独占临界区），即使是同一个线程也无法对资源进行重复加锁，除非是互斥锁。
 
-性能从低到高排列：
+性能从高到低排列：
 
 * OSSpinLock是自旋锁，自旋锁是忙等的锁，当访问资源（这个资源指的是临界区，也就是开锁-解锁区间的代码）被锁时，线程不会休眠，而是不停地循环等待（从汇编底层可以追踪到，自旋锁的忙等就是使用一个类似while循环一直去试探锁有没有被解开），直到被锁资源被释放，所以自旋锁效率较高。但是存在优先级反转的问题：比如优先级低的线程先获取资源，对资源进行了加锁。此时，优先级高的线程进来发现资源已锁，所以就会不断地循环等待。因其优先级更高，所以CPU会优先被使用。而获取到资源的线程却因优先级更低而没法获取到CPU的使用权限，而导致无法释放资源（也就是开锁-解锁区间的代码无法执行完成）。最终导致优先级更高的线程一直在等待解锁，但是却会一直占用CPU，优先级低的线程获取到资源却没有CPU去执行，而无法释放锁；最终导致相互等待的结果。所以自旋锁已经不再使用了；
 	```
