--- a/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
+++ b/读书笔记/iOS自学笔记/知识小集00——基础知识体系.md
@@ -2993,4 +2993,4 @@ https://juejin.im/post/5abca877f265da238155b6bc
 
 [iOS锁详解](https://juejin.im/post/6844904167010467854)
 
-[iOS即时通讯](https://www.jianshu.com/p/2dbb360886a8)
+				1. * [iOS即时通讯](https://www.jianshu.com/p/2dbb360886a8)
